Fix login background and sidebar head alignment

--- a/sass/partials/containers.scss
+++ b/sass/partials/containers.scss
@@ -12,10 +12,10 @@ body {
 	font: 600 13px $font-stack;
 	width: 100%;
 	height: 100%;
-	//position: fixed;
 	transition: background-image 0.2s;
 
 	&[data-active-tab=""] {
+		position: absolute;
 		@include background($bg-dark, 'fixed');
 	}
 }
