--- a/sass/partials/login.scss
+++ b/sass/partials/login.scss
@@ -19,6 +19,7 @@
 	h1 {
 		color: $white;
 		font-weight: 700;
+		text-transform: none;
 		width: 320px;
 		margin: 0;
 	}
