--- a/sass/partials/navbar.scss
+++ b/sass/partials/navbar.scss
@@ -18,6 +18,7 @@
 .top-left-part a {
 	line-height: inherit;
 	font-size: 26px;
+	text-transform: none;
 }
 
 .navbar-top-links {
